# machine-learning-zoomcamp

./: pyproject.toml
02-regression/: notebook.ipynb
03-classification/: notebook.ipynb
cohorts/2023/01-intro/: my_homework.ipynb
cohorts/2023/02-regression/: my_homework_w2.ipynb
cohorts/2023/03-classification/: my_homework_w3.ipynb
my_homework/: week0.ipynb
