[tool.poetry]
name = "machine-learning-zoomcamp"
version = "0.1.0"
description = "machine learning zoomcamp"
authors = ["Elias Ayoub <eliasjrayoub@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^4.0.5"
pandas = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
